<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/logo"/>

        <TextView
            android:text="@string/brain_bot"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/ai_powered_conversational_android_app"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/emailInput"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="#BBBBBB"
            android:background="@drawable/input_background"
            android:paddingHorizontal="14dp"
            android:paddingVertical="18dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="#BBBBBB"
            android:background="@drawable/input_background"
            android:paddingHorizontal="14dp"
            android:paddingVertical="18dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:hint="@string/confirm_password"
            android:textColor="@color/white"
            android:textColorHint="#BBBBBB"
            android:background="@drawable/input_background"
            android:paddingHorizontal="14dp"
            android:paddingVertical="18dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>

        <Button
            android:id="@+id/signupBtn"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:padding="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/loginRedirect"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
